# trading-engine-python-simple-

./: .gitignore  README.md  build_cpp.sh  build_go.sh  build_rust.sh  citadel_demo.py  cpp_trading_engine_demo.py  e2e_test_all_engines.py  e2e_test_report.json  engine_comparison_demo.py  example.py  fast_trade_test.py  framework_robustness_report.json  framework_robustness_report.py  framework_validation_report_20251029_201405.json  framework_validation_report_20251029_201716.json  framework_validation_report_20251029_202511.json  framework_validation_report_20251029_203346.json  framework_validation_report_20251029_203405.json  framework_validation_report_20251029_204233.json  framework_validation_report_20251029_204252.json  main.py  requirements.txt  research_demo.py  rust_integration.py  setup.py  simple_engine_test.py  simulated_trading_report.json  simulated_trading_system.py  test_engines_e2e.py  test_go_engine.go  validate_engines.py
config/production/: engine_config.yaml
cpp_engine/: CMakeLists.txt  Makefile  README.md
cpp_engine/bindings/: python_bindings.cpp
cpp_engine/include/core/: quantization.hpp  types.hpp
cpp_engine/include/order_engine/: order_engine.hpp
cpp_engine/include/risk_engine/: risk_engine.hpp
cpp_engine/include/signal_engine/: signal_engine.hpp
cpp_engine/src/signal_engine/: signal_engine.cpp
go_engine/: README.md  go.mod
go_engine/cmd/: main.go
go_engine/internal/core/: core.go
go_engine/internal/data_engine/: data_engine.go
go_engine/internal/execution_engine/: execution_engine.go
go_engine/internal/order_engine/: order_engine.go
go_engine/internal/performance/: performance.go
go_engine/internal/risk_engine/: risk_engine.go
go_engine/internal/signal_engine/: signal_engine.go  technical_indicators.go
go_engine/pkg/cache/: cache.go
go_engine/pkg/memory/: memory.go
go_engine/pkg/quantization/: quantization.go
go_engine/pkg/types/: types.go
research/: __init__.py  adaptive_optimizer.py  alpha_generator.py  backtesting_engine.py  comprehensive_analyzer.py  comprehensive_test.py  correlation_analyzer.py  cpp_integration.py  cross_market_signals.py  framework_validation_report.py  production_runner.py  risk_manager.py  runner.py  stochastic_optimizer.py  strategies.py  strategy_ensemble.py  unconventional_strategies.py
rust_engine/: Cargo.toml  README.md
rust_engine/src/: engine.rs  lib.rs  python.rs
rust_engine/src/core/: cache.rs  memory.rs  mod.rs  quantization.rs  types.rs
rust_engine/src/data_engine/: data_engine.rs  mod.rs
rust_engine/src/execution_engine/: execution_engine.rs  mod.rs
rust_engine/src/order_engine/: mod.rs  order_book.rs  order_engine.rs  order_router.rs
rust_engine/src/risk_engine/: mod.rs  position_manager.rs  risk_engine.rs  stress_tester.rs  var_calculator.rs
rust_engine/src/signal_engine/: ml_signals.rs  mod.rs  signal_engine.rs  statistical_signals.rs  technical_indicators.rs
trading/: __init__.py  algorithm.py  backtesting.py  data_fetcher.py  risk_manager.py  strategies.py
trading_env/: pyvenv.cfg
