[package]
name = "rust-trading-engine"
version = "1.0.0"
edition = "2021"
authors = ["Trading Framework Team"]
description = "High-performance Rust trading engine with Python bindings"
license = "MIT"
repository = "https://github.com/jadenfix/trading_research"

[lib]
name = "rust_trading_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
# High-performance computing
ndarray = { version = "0.15", features = ["serde"] }
nalgebra = "0.32"
num-traits = "0.2"
num-complex = "0.4"
statrs = "0.16"

# Async and concurrency
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Financial computations
time-series = "0.2"
rust_decimal = { version = "1.32", features = ["serde"] }

# Machine learning (simplified)
linfa = "0.6"
linfa-clustering = "0.6"

# Networking and protocols
tokio-tungstenite = "0.20"
websocket = "0.41"

# Logging and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }

[dependencies.pyo3-asyncio]
version = "0.20"
features = ["tokio-runtime"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
rstest = "0.18"

[features]
default = ["python"]
python = ["pyo3/extension-module"]
extension-module = ["pyo3/extension-module"]

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = false

[profile.bench]
opt-level = 3
debug = false
lto = true
codegen-units = 1

[workspace]
members = ["."]
